--- a/stopwatch/Base.lproj/Main.storyboard
+++ b/stopwatch/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="stopwatch" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="trM-W3-3k3">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="7ea-l3-LuF"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="ADI-ex-RDX">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="WwT-Aj-mZR">
+                                            <color key="tintColor" red="0.36470588240000001" green="0.77647058820000003" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="play:" destination="BYZ-38-t0r" id="k8m-Nv-JOs"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZER-7j-q7E">
+                                <rect key="frame" x="224" y="230" width="153" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="KKE-xG-fzc"/>
+                                    <constraint firstAttribute="width" constant="153" id="Meq-sn-Ry1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jig-kB-3jI">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Ae6-Pt-GKg"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="stop" id="DAU-3t-siV">
+                                        <connections>
+                                            <action selector="reset:" destination="BYZ-38-t0r" id="8FJ-yi-2me"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="AEP-uG-wYR"/>
+                                    <barButtonItem style="plain" systemItem="pause" id="z3l-6r-bC1">
+                                        <connections>
+                                            <action selector="pause:" destination="BYZ-38-t0r" id="xg7-dy-e8W"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZER-7j-q7E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BdB-Xv-Tmt"/>
+                            <constraint firstItem="Jig-kB-3jI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="DQA-Ug-OTB"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Jig-kB-3jI" secondAttribute="bottom" id="FI9-pB-Kmp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Jig-kB-3jI" secondAttribute="trailing" constant="-20" id="FgE-gP-F9e"/>
+                            <constraint firstItem="trM-W3-3k3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="Hpz-MM-WtP"/>
+                            <constraint firstItem="ZER-7j-q7E" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RLP-Uw-Zrs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="trM-W3-3k3" secondAttribute="trailing" constant="-20" id="jaH-X8-0rX"/>
+                            <constraint firstItem="trM-W3-3k3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rYo-2J-UNN"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="timerLabel" destination="ZER-7j-q7E" id="I2e-BF-W8P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="447" y="364"/>
         </scene>
     </scenes>
 </document>
